# copilot-router

./: .gitignore  README.md  pyproject.toml
copilot_router/: __init__.py  aliases.py  failover.py  heuristics.py  models.py  router.py  simple_provider.py
tests/: test_models.py
