[project]
name = "copilot-router"
version = "0.1.0"
description = "LLM routing with circuit breaker, self-escalation, and failover chains"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "llm", "routing", "failover", "circuit-breaker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
litellm = ["litellm>=1.0.0"]
cost = ["aiosqlite>=0.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
